--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -39,6 +39,7 @@ bindsym $mod+Shift+Print exec "grim -g $(slurp -p) -t ppm - | convert - -format 
 bindsym XF86AudioMute exec 'wpctl set-mute @DEFAULT_SINK@ toggle'
 bindsym XF86AudioRaiseVolume exec 'wpctl set-volume @DEFAULT_SINK@ 5%+'
 bindsym XF86AudioLowerVolume exec 'wpctl set-volume @DEFAULT_SINK@ 5%-'
+bindsym XF86AudioNext exec 'pkill mpv'
 bindsym XF86MonBrightnessDown exec 'brightnessctl set 2.5%-'
 bindsym XF86MonBrightnessUp exec 'brightnessctl set +2.5%'
 
